--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Downloads/NeptunesWake/NeptunesWake.exe"
+export_path="../../Downloads/NeptunesWake/win/NeptunesWake.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -110,7 +110,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Downloads/HTML/index.html"
+export_path="../../Downloads/NeptunesWake/html/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
